<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">Rolify</string>
    <string name="app_player_service_description">A service to play the user sound mix.</string>
    <string name="player_notification_channel_name">Player controls</string>
    <string name="player_notification_channel_description">
        A notification with controls for SoundAura background audio service.
    </string>
    <string name="player_no_active_playlists_warning_message">
        There are no active tracks or playlists. Tap a track or playlist add button first.
    </string>
    <string name="player_notification_channel_id" translatable="false">player_controls</string>
    <string name="tile_inactive_description">Play SoundAura audio</string>
    <string name="tile_active_description">Stop SoundAura audio</string>
    <string name="back">Back</string>
    <string name="search">Search</string>
    <string name="sort_options_description">Open sorting options</string>
    <string name="empty_library_message">Your library is empty.

Tap the add button below to add
        local files to your library.

Tap the plus symbol next to an added track or playlist to
        make it part of the sound mix when playback is started.</string>
    <string name="no_search_results_message">No tracks/playlists match the query.</string>
    <string name="set_playlist_active_description">Add %1$s to sound mix</string>
    <string name="set_playlist_inactive_description">Remove %1$s from sound mix</string>
    <string name="playlist_error_message">Files missing/corrupt</string>
    <string name="item_options_button_description">%1$s more options</string>
    <string name="remove_item_description">Remove %1$s</string>
    <string name="master_volume_label">Master volume</string>
    <string name="rename">Rename</string>
    <string name="default_rename_dialog_title">Enter new name</string>
    <string name="remove">Remove</string>
    <string name="turn_on_loop">Turn on loop</string>
    <string name="turn_off_loop">Turn off loop</string>
    <string name="track_loop_enabled_icon_description">%1$s is looping</string>
    <string name="cancel">Cancel</string>
    <string name="ok" tools:ignore="Typos,ButtonCase">Ok</string>
    <string name="dismiss">Dismiss</string>
    <string name="finish">Finish</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="checked">Checked</string>
    <string name="unchecked">Unchecked</string>
    <string name="volume_boost_description">Boost volume</string>
    <string name="volume_boost_explanation_part_1">This will boost the volume of the
        playlist/track before the regular volume is applied. Each 10 dB increase
        results in a perceived doubling of volume. For example:</string>
    <string name="volume_boost_explanation_part_2">
        + 10 dB = 2× volume
        
+ 20 dB = 4× volume
        
+ 30 dB = 8× volume</string>
    <string name="confirm_remove_title">Remove %1$s?</string>
    <string name="confirm_remove_track_message">This will remove the track from your library
        and any presets it is a part of, but will not delete the file from your device.</string>
    <string name="confirm_remove_playlist_message">
        This will remove the playlist from your library and any presets it is a
        part of, but will not delete the files in the playlist from your device.</string>
    <string name="create_playlist_title">Create playlist</string>
    <string name="playlist_options_title">Playlist options</string>
    <string name="playlist_track_count_description">%1$s track(s)</string>
    <string name="playlist_shuffle_switch_title">Shuffle</string>
    <string name="playlist_shuffle_switch_description">Toggle shuffle on/off</string>
    <string name="playlist_playback_mode_switch_description">Toggle playlist playback mode</string>
    <string name="playlist_playback_mode_sequential">Sequential</string>
    <string name="playlist_playback_mode_simultaneous">Simultaneous</string>
    <string name="playlist_track_loop_description">Toggle loop for %1$s</string>
    <string name="playlist_track_handle_description">Reorder track %1$s</string>
    <string name="playlist_track_error_message">File missing/corrupt:</string>
    <string name="playlist_track_delete_description">Remove %1$s</string>
    <string name="playlist_add_tracks_button_description">Add tracks to %1$s</string>
    <string name="playlist_track_volume_description">Volume for %1$s</string>
    <string name="configure_playlist_dialog_title">Configure playlist options</string>
    <string name="file_chooser_no_valid_tracks_error_message">
        Choose at least one file that is not already in the playlist</string>
    <string name="file_chooser_invalid_tracks_warning_message">
        %1$d of the files were already in the playlist</string>
    <string name="change_path">Change path</string>
    <string name="change_folder_path">Change folder path</string>
    <string name="change_path_description">Change path for %1$s</string>
    <string name="playlist_options_request_storage_permission_explanation">
        SoundAura has used %1$d of the %2$d file permissions Android allows for
        apps without full storage access. The read audio files permission must
        be granted in order to add the new tracks to the playlist.
    </string>
    <string name="add_local_files_request_storage_permission_title">Insufficient space</string>
    <string name="add_local_files_request_storage_permission_explanation_for_tracks">
        SoundAura has used %1$d of the %2$d file permissions Android allows for
        apps without full storage access. The read audio files permission must
        be granted in order to add all of the tracks.
    </string>
    <string name="add_local_files_request_storage_permission_explanation_for_playlist">
        SoundAura has used %1$d of the %2$d file permissions Android allows for
        apps without full storage access. The read audio files permission must
        be granted in order to add the entire playlist.
    </string>
    <string name="add_local_files_button_description">Add tracks or playlists from local files</string>
    <string name="add_local_files_as_playlist_or_tracks_title">Add local file(s)</string>
    <string name="add_local_files_as_playlist_or_tracks_question">
        Add files as individual tracks, or as a playlist?</string>
    <string name="add_local_files_individually_option">Individually</string>
    <string name="add_local_files_as_playlist_option">Playlist</string>
    <string name="add_local_files_as_tracks_dialog_title">Confirm track name(s)</string>
    <string name="add_local_files_as_playlist_dialog_title">Confirm playlist name</string>
    <string name="add_preset_button_description">Create new preset</string>
    <string name="create_new_preset_dialog_title">Enter new preset name</string>
    <string name="add">Add</string>
    <string name="add_multiple_tracks_name_error_message">The tracks must have unique, non-blank names</string>
    <string name="name_dialog_blank_name_error_message">The name can not be blank</string>
    <string name="name_dialog_duplicate_name_error_message">The name is already in use</string>
    <string name="cant_add_tracks_warning">
        The files could not be added because Androids file permission
        limit would be exceeded. Remove some tracks or playlists and try
        again, or grant the app the read files permission.</string>
    <string name="cant_add_playlist_warning">
        The playlist could not be added because Androids file permission
        limit would be exceeded. Remove some tracks or playlists and try
        again, or grant the app the read files permission.</string>
    <string name="cant_add_playlist_tracks_warning">
        The new tracks could not be added to the playlist because Androids file
        permission limit would be exceeded. Remove some tracks or playlists and
        try again, or grant the app the read files permission.
    </string>
    <string name="overwrite_no_active_playlists_error_message">
        Presets must have at least one active track or playlist</string>
    <string name="preset_cannot_be_empty_warning_message">
        There are no active tracks or playlists to add to the preset</string>
    <string name="preset_button_click_label">Change active preset</string>
    <string name="unsaved_preset_description">Unsaved preset</string>
    <string name="preset_selector_title">Select a preset</string>
    <string name="empty_preset_list_message">You do not have any saved presets.
        Tap the add button below to save the current sound mix as a preset.</string>
    <string name="preset_click_label">Load preset %1$s</string>
    <string name="close_preset_selector_description">Close preset selector</string>
    <string name="overwrite">Overwrite</string>
    <string name="confirm_overwrite_preset_dialog_title">Confirm overwrite preset</string>
    <string name="confirm_overwrite_preset_dialog_message">
        This will overwrite the preset %1$s. Are you sure?</string>
    <string name="delete">Delete</string>
    <string name="confirm_delete_preset_title">Delete %1$s?</string>
    <string name="confirm_delete_preset_message">
        This will not remove the tracks or playlists in the preset from your library.</string>
    <string name="unsaved_preset_changes_warning_title">Unsaved changes</string>
    <string name="unsaved_preset_changes_warning_message">The preset %1$s has unsaved changes.
        If you load a new preset now, you will lose any changes made since it was last saved.</string>
    <string name="unsaved_preset_changes_warning_save_first_option">Save changes first</string>
    <string name="unsaved_preset_changes_warning_load_anyways_option">Load anyways</string>
    <string name="playing">Playing</string>
    <string name="paused">Paused</string>
    <string name="stopped">Stopped</string>
    <string name="play_button_description">Play SoundAura audio</string>
    <string name="pause_button_description">Pause SoundAura audio</string>
    <string name="play_pause_button_long_click_description">Set auto stop timer</string>
    <string name="play_button_long_click_hint_text">
        Hint: You can long press the play/pause button to set an automatic stop timer</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="close">Close</string>
    <string name="set_stop_timer_dialog_description">
        Set the duration after which playback will automatically be stopped.
        You can change the amounts using the up or down buttons, or by
        dragging the amount up or down.</string>
    <string name="stop_timer_text">ing in</string>
    <string name="stop_timer_click_label">Cancel auto stop timer</string>
    <string name="stop_timer_description">Stopping in %1$s</string>
    <string name="cancel_stop_timer_action">Cancel stop timer</string>
    <string name="cancel_stop_timer_dialog_title">Confirm timer cancellation</string>
    <string name="cancel_stop_timer_dialog_text">
        Are you sure you would like to cancel the auto stop timer?</string>
    <string name="show_active_playlists_first">Show active first</string>
    <string name="name_ascending">Name ascending</string>
    <string name="name_descending">Name descending</string>
    <string name="order_added">Order added</string>
    <string name="playlist">Playlist</string>
    <string name="app_settings_description">SoundAura settings</string>
    <string name="settings">Settings</string>
    <string name="display">Display</string>
    <string name="stop">Stop</string>
    <string name="play_pause">Play/Pause</string>
    <string name="presets">Presets</string>
    <string name="play_pause_description">Toggle Play/Pause</string>
    <string name="stop_description">Stop Playback</string>
</resources>